--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            max-width: 800px;
+            max-width: 1200px;
             margin: 0 auto;
             padding: 20px;
-            background-color: #f0f0f0;
+            background-color: #f5f5f5;
         }
         .container {
             background-color: white;
@@ -35,7 +35,50 @@
         .slider-container {
             margin-bottom: 20px;
         }
-        .slider-description {
+        input[type="range"] {
+            width: 100%;
+            margin: 10px 0;
+            height: 25px;
+            -webkit-appearance: none;
+            appearance: none;
+            background: #ddd;
+            border-radius: 5px;
+        }
+        input[type="range"]::-webkit-slider-thumb {
+            -webkit-appearance: none;
+            appearance: none;
+            height: 25px;
+            width: 25px;
+            border-radius: 50%;
+            background: #4CAF50;
+            cursor: pointer;
+            margin-top: -7px;
+        }
+        input[type="range"]::-moz-range-thumb {
+            height: 25px;
+            width: 25px;
+            border: none;
+            border-radius: 50%;
+            background: #4CAF50;
+            cursor: pointer;
+        }
+        input[type="range"]::-moz-range-track {
+            width: 100%;
+            height: 10px;
+            background: #ddd;
+            border-radius: 5px;
+            border: none;
+        }
+        input[type="range"]::-webkit-slider-runnable-track {
+            width: 100%;
+            height: 10px;
+            background: #ddd;
+            border-radius: 5px;
+        }
+        input[type="range"]:focus {
+            outline: none;
+        }
+        .slider-description, .ratio-description {
             font-size: 14px;
             color: #666;
             margin-top: 5px;
@@ -81,8 +124,18 @@
         </div>
         <div class="slider-container">
             <label for="multiplier">Mutation Strength: <span id="multiplierValue">2.0</span>x</label>
-            <input type="range" id="multiplier" min="1" max="10" step="0.1" value="2.0">
-            <div class="slider-description">Controls how much attributes are multiplied/divided (from 1x to 10x)</div>
+            <input type="range" id="multiplier" min="1" max="100" step="1" value="2.0">
+            <div class="slider-description">Controls how much attributes are multiplied/divided (from 1x to 100x)</div>
+        </div>
+        <div class="slider-container">
+            <label for="nerfRatio">Nerf Ratio: <span id="nerfRatioValue">1.0</span>x</label>
+            <input type="range" id="nerfRatio" min="-1" max="2" step="0.1" value="1.0">
+            <div class="ratio-description">-1: Two buffs | 1: Equal buff/nerf | 2: Double nerf</div>
+        </div>
+        <div class="slider-container">
+            <label for="unitsPerFactory">Units Per Factory: <span id="unitsPerFactoryValue">100</span>%</label>
+            <input type="range" id="unitsPerFactory" min="1" max="100" step="1" value="100">
+            <div class="ratio-description">Percentage of units to modify from each factory type</div>
         </div>
         <div class="button-container">
             <button onclick="handleGenerateMutations()" id="generateBtn">Generate Mutations</button>
